# puffin

./: .env.example  .gitattributes  .gitignore  README.md  env.yml  pyproject.toml  setup.py
configs/: cluster.yaml  esm_embed.yaml  eval.yaml  train.yaml
configs/callbacks/: early_stopping.yaml
configs/dataset/: go-bp.yaml  go-cc.yaml  go-mf.yaml
configs/decoder/: graph_label.yaml
configs/encoder/: puffin.yaml
configs/env/: default.yaml
configs/features/: ca_bb.yaml
configs/metrics/: auprc.yaml  f1_max.yaml
configs/optimiser/: adamw.yaml
configs/paths/: default.yaml
configs/scheduler/: steplr.yaml
configs/task/: multilabel_graph_classification.yaml
configs/trainer/: default.yaml
notebooks/: K_value_choice_plots.ipynb  case_study_rdr2_analysis.ipynb  functional_organization.ipynb  publication.ipynb  random_pdb.ipynb  sdr_protein_family_analysis.ipynb  supplementary.ipynb
scripts/: aggreate_func_eval.sh  characterize_segments.sh  collect_segment_json_metrics.py  create_segments.sh  eval_func_puffin.sh  full_pipeline.sh  global_prototypes.sh  train_models.sh
src/: cluster.py  cluster_compare.py  cluster_structural_compare.py  esm_embed.py  eval.py  global_prototypes_fit.py  inference.py  interpro_proto_comp_notebook.ipynb  interpro_proto_go_term_comparison.py  segment_characterize.py  segment_func_eval.py  segment_neighborhood.py  train.py  unit_func_eval.py
src/data/: __init__.py  biolip.py  check_ancestors.py  download_interpro.py  ecod.py  filter.py  go_datamodule.py  ia.py  interpro.py  manager.py  protein_dataset.py  rename.py  scope.py  singleprotein.py
src/models/: dual_model.py  puffin.py  unsupervised_model.py
src/utils/: cluster_utils.py  eval_utils.py  metrics.py  model_utils.py
